syntax = "proto3";
package seiprotocol.seichain.mint;

option go_package = "github.com/sei-protocol/sei-chain/x/mint/types";

import "gogoproto/gogo.proto";

// Minter represents the minting state.
message Minter {
  // current epoch provisions
  string epoch_provisions = 1 [
    (gogoproto.moretags) = "yaml:\"epoch_provisions\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
    ];
}

// Params holds parameters for the mint module.
message Params {
  option (gogoproto.goproto_stringer) = false;

  // type of coin to mint
  string mint_denom = 1;
  // epoch provisions from the first epoch
  string genesis_epoch_provisions = 2 [
    (gogoproto.moretags) = "yaml:\"genesis_epoch_provisions\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  // number of epochs to take to reduce rewards
  int64 reduction_period_in_epochs = 3 [(gogoproto.moretags) = "yaml:\"reduction_period_in_epochs\""];
  // reduction multiplier to execute on each period
  string reduction_factor = 4 [
    (gogoproto.moretags) = "yaml:\"reduction-factor\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];

}
